--- a/app/views/layouts/application_bikehub.html.haml
+++ b/app/views/layouts/application_bikehub.html.haml
@@ -12,46 +12,48 @@
   %body{ id: page_id, class:  body_class, style: "padding-top: 0;" }
     -# This is either the signup or signin page
     - signup_page = controller_name != "sessions"
-    %nav.navbar.nav.bikehub-nav
-      .container-fluid
-        .row
-          %a.bikehub-logo{ href: "https://bikehub.com" }
-            = image_tag "logos/bikehub_logo.png", class: "primary-nav", alt: "BikeHub home"
-          .poweredby
-            %p= t(".powered_by")
-            %a.primary-logo{ href: user_root_url }
-              = image_tag "logo.svg", class: "primary-nav", alt: "Bike Index home"
-          %a.bikehub-nav-item.bikehub-nav-item-first{href: "#"}
-            Home
-          %a.bikehub-nav-item{ href: "https://bikehub.com/contact/" }
-            = t(".contact")
-          %a.bikehub-nav-item{ href: "#"}
-            Register
-          %a.bikehub-nav-item{ href: "#"}
-            Log In
-          %a.bikehub-nav-item{ href: "#"}
-            Select a station
-    .row.text-center.teamed-up-with-bike-index.d-flex.align-items-center
-      .col-lg-4
-        %h1.mb-auto
-          We teamed up with Bike Index!
-        = image_tag "high-five.svg", alt: "High Five"
-      .col-lg-8
-        %p
-          Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
-        %p
-          At BikeHub, we believe bike security is more than just a strong U-lock
-        %p
-          Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking - and registration with the nation's largest network, used by law enforcement agencies, universities and advocates to connect recovery bikes with their owners.
-    .login-info
-      %h1
-        BikeHub accounts are powered by Bike Index - The premier bike registry.
-      %h1
-        Logging in here will log you into BikeHub
+    .bikehub
+      %nav.navbar.nav.bikehub-nav.navbar-fixed-top
+        .container-fluid
+          .row
+            %a.bikehub-logo{ href: "https://bikehub.com" }
+              = image_tag "logos/bikehub_logo.png", class: "primary-nav", alt: "BikeHub home"
+            .poweredby
+              %p= t(".powered_by")
+              %a.primary-logo{ href: user_root_url }
+                = image_tag "logo.svg", class: "primary-nav", alt: "Bike Index home"
+            %a.bikehub-nav-item.bikehub-nav-item-first{href: "#"}
+              Home
+            %a.bikehub-nav-item{ href: "https://bikehub.com/contact/" }
+              = t(".contact")
+            %a.bikehub-nav-item{ href: "#"}
+              Register
+            %a.bikehub-nav-item{ href: "#"}
+              Log In
+            %a.bikehub-nav-item{ href: "#"}
+              Select a station
+      = image_tag "landing_pages/header_bg_school"
+      .row.text-center.teamed-up-with-bike-index
+        .col-lg-4
+          %h1.mb-auto
+            We teamed up with Bike Index!
+          = image_tag "high-five.svg", alt: "High Five"
+        .col-lg-8
+          %p
+            Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
+          %p
+            At BikeHub, we believe bike security is more than just a strong U-lock
+          %p
+            Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking - and registration with the nation's largest network, used by law enforcement agencies, universities and advocates to connect recovery bikes with their owners.
+      .login-info
+        %h1
+          BikeHub accounts are powered by Bike Index - The premier bike registry.
+        %h1
+          Logging in here will log you into BikeHub
 
 
-    = render "layouts/revised_messages"
-    = yield
+      = render "layouts/revised_messages"
+      = yield
 
 
   :javascript
