--- a/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
+++ b/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
@@ -17,17 +17,21 @@ $bikehub-header: #92d149;
   }
 
   .teamed-up-with-bike-index {
+    @include make-col-ready;
+    @include make-col(12);
+    margin-top: 2 * $vertical-height;
     background: white;
     max-width: 675px;
     max-height: 300px;
-    border-style: solid;
     margin: 0 auto;
     margin-bottom: 25px;
     padding-top: 20px;
     h1 {
-      font-size: 22px;
-      font-weight: bold;
-      color: #05A334;
+      font-size: 22px!important;
+      font-weight: bold!important;
+      color: #05A334!important;
+      text-shadow: none!important;
+      text-align: center!important;
     }
     img {
       max-height: 100%;
@@ -38,6 +42,7 @@ $bikehub-header: #92d149;
     }
   }
 }
+
 .bikehub-explanation {
   h1,
   h2 {
