little clean up

--- a/app/views/layouts/application_bikehub.html.haml
+++ b/app/views/layouts/application_bikehub.html.haml
@@ -37,20 +37,18 @@
 
       .signup-landing-page.landing-page{ class: "signup-landing-page-#{landing_page_target}" }
         %header.banner-header
-          .row
-            .teamed-up-with-bike-index
-              .row.text-center
-                .col-lg-4
-                  %h1.mb-auto
-                    We teamed up with Bike Index!
-                  = image_tag "high-five.svg", alt: "High Five"
-                .col-lg-8
-                  %p
-                    Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
-                  %p
-                    At BikeHub, we believe bike security is more than just a strong U-lock
-                  %p
-                    Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking - and registration with the nation's largest network, used by law enforcement agencies, universities and advocates to connect recovery bikes with their owners.
+          .row.teamed-up-with-bike-index.text-center
+            .col-lg-4
+              %h1.mb-auto
+                We teamed up with Bike Index!
+              = image_tag "high-five.svg", alt: "High Five"
+            .col-lg-8
+              %p
+                Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
+              %p
+                At BikeHub, we believe bike security is more than just a strong U-lock
+              %p
+                Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking - and registration with the nation's largest network, used by law enforcement agencies, universities and advocates to connect recovery bikes with their owners.
       .login-info
         %h1
           BikeHub accounts are powered by Bike Index - The premier bike registry.
