--- a/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
+++ b/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
@@ -2,13 +2,10 @@
 $bikehub-header: #92d149;
 
 .bikehub{
-  img {
-
-  }
   .bike-hub-bike-index-about {
     max-width: 610px;
   }
-  .login-info {
+  .bike-hub-login{
     h1{
       color: #05A334;
       font-size: 35px;
@@ -17,8 +14,8 @@ $bikehub-header: #92d149;
   }
 
   .teamed-up-with-bike-index {
-    @include make-col-ready;
-    @include make-col(12);
+    // @include make-col-ready;
+    // @include make-col(12);
     background: white;
     max-width: 675px;
     max-height: 300px;
@@ -39,17 +36,6 @@ $bikehub-header: #92d149;
     p {
       font-size: 12px;
     }
-  }
-}
-
-.bikehub-explanation {
-  h1,
-  h2 {
-    color: $bikehub-header;
-  }
-
-  p {
-    width: 100%;
   }
 }
 
