--- a/app/views/admin/users/_table.html.haml
+++ b/app/views/admin/users/_table.html.haml
@@ -39,7 +39,7 @@
                 = l user.created_at, format: :convert_time
             %td
               .less-strong-hold
-                = link_to user.email, edit_admin_user_url(user)
+                = link_to user.email, edit_admin_user_url(user.id)
                 - if user.donor?
                   <span class="donor-icon">D</span>
                 - elsif user.paid_org?
