--- a/app/views/admin_mailer/blocked_stolen_notification_email.text.erb
+++ b/app/views/admin_mailer/blocked_stolen_notification_email.text.erb
@@ -8,6 +8,6 @@
 
 <hr>
 
-<h3 style="font-weight: 400;"><%= link_to "Update their account", edit_admin_user_url(@stolen_notification.sender) %> if they should be allowed to send more email.<h3>
+<h3 style="font-weight: 400;"><%= link_to "Update their account", edit_admin_user_url(@stolen_notification.sender_id) %> if they should be allowed to send more email.<h3>
 
 <h3 style="font-weight: 400;"><%= link_to "Resend the message afterward", resend_admin_stolen_notification_url(@stolen_notification) %></h3>
