--- a/app/views/admin_mailer/theft_alert_purchased.html.haml
+++ b/app/views/admin_mailer/theft_alert_purchased.html.haml
@@ -18,7 +18,7 @@
     = link_to "Payment", edit_admin_payment_url(@theft_alert.payment), target: "_blank"
 
 %h4{style: "margin-top: 1em;"}
-  = link_to "User", edit_admin_user_url(@creator), target: "_blank"
+  = link_to "User", edit_admin_user_url(@creator.id), target: "_blank"
 
 %span{style: "display: block; line-height: 1.5em;"}
   = @creator.name
