translations/more clean up

--- a/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
+++ b/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
@@ -2,6 +2,11 @@
 $bikehub-header: #92d149;
 
 .bikehub{
+  .signup-landing-page {
+    .banner-header {
+      margin-top: 68px;
+    }
+  }
   .bike-hub-bike-index-about {
     max-width: 610px;
   }
