--- a/app/views/layouts/application_bikehub.html.haml
+++ b/app/views/layouts/application_bikehub.html.haml
@@ -20,19 +20,20 @@
             %a.bikehub-logo{ href: "https://bikehub.com" }
               = image_tag "logos/bikehub_logo.png", class: "primary-nav", alt: "BikeHub home"
             .poweredby
-              %p= t(".powered_by")
+              %p
+                = t(".powered_by")
               %a.primary-logo{ href: user_root_url }
                 = image_tag "logo.svg", class: "primary-nav", alt: "Bike Index home"
             %a.bikehub-nav-item.bikehub-nav-item-first{href: "#"}
-              Home
+              = t(".home")
             %a.bikehub-nav-item{ href: "https://bikehub.com/contact/" }
               = t(".contact")
             %a.bikehub-nav-item{ href: "#"}
-              Register
+              = t(".register")
             %a.bikehub-nav-item{ href: "#"}
-              Log In
+              = t(".login")
             %a.bikehub-nav-item{ href: "#"}
-              Select a station
+              = t(".select_a_station")
 
 
       .signup-landing-page.landing-page{ class: "signup-landing-page-#{landing_page_target}" }
@@ -40,20 +41,20 @@
           .row.teamed-up-with-bike-index.text-center
             .col-lg-4
               %h1.mb-auto
-                We teamed up with Bike Index!
+                = t(".teamed_up")
               = image_tag "high-five.svg", alt: "High Five"
             .col-lg-8
               %p
-                Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
+                = t(".non_profit")
               %p
-                At BikeHub, we believe bike security is more than just a strong U-lock
+                = t(".security")
               %p
-                Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking - and registration with the nation's largest network, used by law enforcement agencies, universities and advocates to connect recovery bikes with their owners.
-      .login-info
+                = t(".partnership")
+      .bike-hub-login
         %h1
-          BikeHub accounts are powered by Bike Index - The premier bike registry.
+          = t(".accounts")
         %h1
-          Logging in here will log you into BikeHub
+          = t(".logging_in_here")
 
 
       = render "layouts/revised_messages"
