--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -3,7 +3,7 @@
 .admin-subnav.midpage-subnav
   .col-12
     %h1
-      Edit Theft Alert
+      Edit Promoted Alert
 
 = form_for @theft_alert,
   url: admin_theft_alert_path(@theft_alert),
