put promoted alert images in promoted alerts

--- a/app/views/admin/theft_alert_plans/index.html.haml
+++ b/app/views/admin/theft_alert_plans/index.html.haml
@@ -1,10 +1,10 @@
 .admin-subnav
   .col-md-4
-    %h1 Theft Alert Plans
+    %h1 Promoted Alert Plans
   .col-md-8
     %ul
       %li.nav-item
-        = link_to "New Theft Alert Plan", new_admin_theft_alert_plan_path
+        = link_to "New Promoted Alert Plan", new_admin_theft_alert_plan_path
 
 .full-screen-table
   %table.table.table-striped.table-bordered.ambassador-tasks-table
