--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -7,6 +7,9 @@
     - next if index == 1
     .col-3.mb-2.col-lg-2
       = image_tag img.image_url(:small), class: "ml-auto mr-auto", style: "display: block; max-width: 150px; height: auto;"
+
+= render partial: "/admin/bikes/theft_alert_images", locals: { bike: @bike }
+
 - if @stolen_record.blank?
   %h1.mt-4
     Stolen record not created yet.
