--- a/app/views/organized/bikes/incompletes.html.haml
+++ b/app/views/organized/bikes/incompletes.html.haml
@@ -17,7 +17,7 @@
         .actions
           = submit_tag t(".search"), class: "btn btn-primary"
 
-- include_child_org = current_organization.child_ids.any?
+- include_child_org = current_organization.child_ids.present?
 %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
   %thead.small-header
     %th
