--- a/app/views/customer_mailer/promoted_alert_email.html.haml
+++ b/app/views/customer_mailer/promoted_alert_email.html.haml
@@ -1,16 +1,16 @@
 %h1
-  <Name>
+  = @user.name
 %p
-  Sorry to hear about your <bike brand>. We've started to share the word on Facebook, Twitter and Instagram about your stolen bike. We encourage you to continue to share aggressively on your social media channels. Be sure to look out for local stolen bike user groups on Facebook as another place to connect with supporters.
+  = t(".html.sorry_to_hear_about_your_bike")
 %p
-  Your promoted alert has begun showing to cycling enthusiasts in <city>. You can share using your bike URL <bikeindex bike url>.
+  = t(".html.your_promoted_alert")
 %img
   <alert_image>
 %p
-  If you have any additional information to add or need to extend the alert, please return to your Bike Index account.
+  = t(".html.additional_info")
 %p
-  Everyone in the Bike Index community is pulling for the safe return of you bike. If it recovered, please do let us know via your account and consider a tax deductible donation so we can expand our efforts on behalf of the cycling community.
+  = t(".html.safe_return")
 %p
-  Regards,
+  = t(".html.regards")
 %p
-  Team Bike Index
+  = t(".html.team")
