--- a/app/views/customer_mailer/promoted_alert_email.text.haml
+++ b/app/views/customer_mailer/promoted_alert_email.text.haml
@@ -1,16 +1,16 @@
 
 = @user.name
 
-= t(".html.sorry_to_hear_about_your_bike")
+= t(".text.sorry_to_hear_about_your_bike")
 
-= t(".html.your_promoted_alert")
+= t(".text.your_promoted_alert")
 
-<alert_image>
+= image_tag @bike.thumb_path
 
-= t(".html.additional_info")
+= t(".text.additional_info")
 
-= t(".html.safe_return")
+= t(".text.safe_return")
 
-= t(".html.regards")
+= t(".text.regards")
 
-= t(".html.team")
+= t(".text.team")
