--- a/app/views/customer_mailer/promoted_alert_email.html.haml
+++ b/app/views/customer_mailer/promoted_alert_email.html.haml
@@ -4,8 +4,8 @@
   = t(".html.sorry_to_hear_about_your_bike")
 %p
   = t(".html.your_promoted_alert")
-%img
-  <alert_image>
+
+= image_tag @bike.thumb_path
 %p
   = t(".html.additional_info")
 %p
