--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -1,9 +1,11 @@
 = render partial: "/admin/bikes/bike", locals: { bike: @bike, target: "show", stolen_record: @stolen_record }
 
+= render partial: "/admin/bikes/theft_alert_images", locals: { bike: @bike }
+
 .admin-subnav.midpage-subnav
   .col-12
     %h1
-      Edit Theft Alert
+      Edit Promoted Alert
 
 = form_for @theft_alert,
   url: admin_theft_alert_path(@theft_alert),
