--- a/app/views/customer_mailer/promoted_alert_email.html.haml
+++ b/app/views/customer_mailer/promoted_alert_email.html.haml
@@ -1,9 +1,9 @@
 %h1
   = @user.name
 %p
-  = t(".html.sorry_to_hear_about_your_bike")
+  = t(".html.sorry_to_hear_about_your_bike", brand: @bike.manufacturer)
 %p
-  = t(".html.your_promoted_alert")
+  = t(".html.your_promoted_alert", city: @user.city.present? ? @user.city : "your city", id: @bike.id)
 
 = image_tag @bike.thumb_path
 %p
