--- a/app/views/customer_mailer/promoted_alert_email.html.haml
+++ b/app/views/customer_mailer/promoted_alert_email.html.haml
@@ -5,7 +5,9 @@
 %p
   = t(".html.your_promoted_alert", city: @user.city.present? ? @user.city : "your city", id: @bike.id)
 
-= image_tag @bike.thumb_path
+.bike-box
+  = image_tag @alert_image.url
+
 %p
   = t(".html.additional_info")
 %p
