--- a/app/views/customer_mailer/promoted_alert_email.text.haml
+++ b/app/views/customer_mailer/promoted_alert_email.text.haml
@@ -5,7 +5,7 @@
 
 = t(".html.your_promoted_alert", city: @user.city.present? ? @user.city : "your city", id: @bike.id)
 
-= image_tag @bike.thumb_path
+= image_tag @alert_image.url
 
 = t(".text.additional_info")
 
