--- a/app/views/customer_mailer/promoted_alert_email.html.haml
+++ b/app/views/customer_mailer/promoted_alert_email.html.haml
@@ -3,7 +3,7 @@
 %p
   = t(".html.sorry_to_hear_about_your_bike", brand: @bike.manufacturer)
 %p
-  = t(".html.your_promoted_alert", city: @bike.stolen_record.city.present? ? @bike.stolen_record.city : "your city", id: @bike.id)
+  = t(".html.your_promoted_alert", city: @bike.current_stolen_record.city.present? ? @bike.stolen_record.city : "your city", id: @bike.id)
 - if @alert_image.present?
   .bike-box
     = image_tag @alert_image.url
