--- a/app/views/customer_mailer/promoted_alert_email.html.haml
+++ b/app/views/customer_mailer/promoted_alert_email.html.haml
@@ -1,13 +1,11 @@
-%h1
-  = @user.name
 %p
-  = t(".html.sorry_to_hear_about_your_bike", brand: @bike.manufacturer)
+  = t(".html.sorry_to_hear_about_your_bike", brand: @bike.manufacturer.name)
 %p
   = t(".html.your_promoted_alert", city: @theft_alert.stolen_record.city.present? ? @theft_alert.stolen_record.city : "your city", id: @bike.id)
 
 - if @alert_image.present?
   .bike-box
-    = image_tag @alert_image.url
+    = image_tag @alert_image
 
 %p
   = t(".html.additional_info")
