--- a/app/views/customer_mailer/promoted_alert_email.text.haml
+++ b/app/views/customer_mailer/promoted_alert_email.text.haml
@@ -1,11 +1,9 @@
 
-= @user.name
-
-= t(".text.sorry_to_hear_about_your_bike", brand: @bike.manufacturer)
+= t(".text.sorry_to_hear_about_your_bike", brand: @bike.manufacturer.name)
 
 = t(".text.your_promoted_alert", city: @theft_alert.stolen_record.city.present? ? @theft_alert.stolen_record.city : "your city", id: @bike.id)
 - if @alert_image.present?
-  = image_tag @alert_image.url
+  = image_tag @alert_image
 
 = t(".text.additional_info")
 
