--- a/app/views/admin/bike_codes/index.html.haml
+++ b/app/views/admin/bike_codes/index.html.haml
@@ -85,6 +85,18 @@
           Viewing Just Batch ##{@bike_code_batch.id}
         %small
           = link_to "view all batches", admin_bike_codes_path(sortable_search_params.except(:search_bike_code_batch_id))
+      %em
+        Duplicated:
+      %ul
+        - @bike_code_batch.duplicated_integers.each do |int|
+          %li.small
+            %code
+              = int
+      Non-sequential:
+      %ul
+        - @bike_code_batch.non_sequential_integers.each do |arr|
+          %li.small
+            #{arr[0]} > #{arr[1]}
   .col-md-6.mt-2
     = form_tag admin_bike_codes_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort, sort_column
