--- a/app/views/info/lightspeed.html.haml
+++ b/app/views/info/lightspeed.html.haml
@@ -1,62 +1,59 @@
 .vendor-signup.page-content
   %h1
-    How to: Lightspeed Retail and Bike Index Integration
+    = t(".how_to_lightspeed_retail")
   %article
     %p.mt-4
-      This page gives instructions on integrating Bike Index registration with your Lightspeed Retail POS system. <strong><a href="#{about_url}">Read our about page</a></strong> for general information about what Bike Index is and why it's important.
+      = t(".this_page_gives_instructions_html", about_url: about_url)
+
   .video-responsive
     <iframe src="https://www.youtube.com/embed/MKUNw4zfLJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   %article.mt-4
     %p
-      At Bike Index we believe that bicycle registration is one of the simplest and most effective ways to fight bicycle theft. By offering complete integration with Lightspeed Retail, we've made registration a quick, painless, and automated process for you and your customers.
+      = t(".we_believe_that_bicycle_registration")
 
     - if current_user.present? && current_user.memberships.present?
-      %p
-        All you have to do is go to #{ link_to 'bikeindex.org/lightspeed_interface', lightspeed_interface_path }, where you'll be asked to authorize Bike Index to access your Lightspeed Account.
+      - link = link_to 'bikeindex.org/lightspeed_interface', lightspeed_interface_path
+      %p= t(".all_you_have_to_do_is_go_to_html", link: link)
     - else
-      %p
-        The first step is to create an account for yourself and your shop - you can do that <a href="#add_organization" class="scroll-to-ref">at the bottom of this page</a>
-      %p
-        Once you have a Bike Index account set up for your shop, there will be a link on this page to take you to the integration.
+      %p= t(".the_first_step_is_to_create_an_account_html")
+      %p= t(".once_you_have_a_bike_index_account_set_up")
 
-    %p
-      Once your Lightspeed Retail account is connected to your Bike Index account with automatic registration turned on, a listing on Bike Index will be automatically created for every bicycle you sell. All you need to do is add the customer's email address and the bicycle's serial number during a normal Lightspeed Retail checkout.
+    %p= t(".a_listing_on_bike_index_will_be_created")
 
   %article.mt-4
-    %p
-      The bicycle's owner will receive an email with all the information he or she needs to log in and maintain the account as well as a PDF copy of the registration information.
-    %h3
-      A few things to note:
+    %p= t(".the_bicycles_owner_will_receive_an_email")
+
+    %h3= t(".a_few_things_to_note")
 
   %ul.fancy-bullets
     %li
       %span.blue-bullet
-      %p
-        If a customer doesn't want a bike to be added to Bike Index, simply write "DO NOT REGISTER" in the notes for the sale and the bicycle will not be registered.
+      %p= t(".write_do_not_register")
     %li
       %span.blue-bullet
-      %p
-        Bicycles sold before you activated Lightspeed Retail integration will not be registered.
+      %p= t(".bicycles_sold_before_you_activated_lights")
     %li
+      - link = link_to t(".privacy_policy_here"), privacy_url
       %span.blue-bullet
-      %p
-        We know you and your customers are concerned about privacy and access to your sales and customer information. Bike Index is committed to keeping your information safe and secure, and we will never send your customers unsolicited email. You can our #{link_to "Privacy Policy here", privacy_url}.
+      %p= t(".we_know_you_and_your_customers_html", link: link)
     %li
+      - link = link_to "support@bikeindex.org", "mailto:support@bikeindex.org"
       %span.blue-bullet
-      %p
-        We're happy to answer any questions you have about making Bike Index work with Lightspeed Retail and we're always looking for ways to improve the integration. Please #{link_to "support@bikeindex.org", "mailto:support@bikeindex.org"} with any questions, concerns, comments, or suggestions.
+      %p= t(".were_happy_to_answer_any_questions_html", link: link)
 
   %blockquote
-    I started Bike Index because I wanted to register bikes for my customers at the shop where I worked &mdash; with this integration, we finally give shops a way to register bikes that doesn't interfere with selling them.
+    = t(".i_started_bike_index_because")
+
   .blockquote-cite
-    Seth Herr, Bike Index co-founder
+    Seth Herr,
+    = t(".bike_index_cofounder")
 
   .row.mt-4{ style: "align-items: center;" }
     .col-xs-6
-      Learn more about
+      = t(".learn_more_about")
       %a{ href: "https://www.lightspeedhq.com/pos/retail/bike-shop/?utm_medium=partner&utm_source=Reseller&utm_campaign=001G00000118MwjIAE&ref=001G00000118MwjIAE", style: "display: inline-block;" }
-        Lightspeed Retail
+        = t(".lightspeed_retail")
     .col-xs-6
       %a{ href: "https://www.lightspeedhq.com/pos/retail/bike-shop/?utm_medium=partner&utm_source=Reseller&utm_campaign=001G00000118MwjIAE&ref=001G00000118MwjIAE", style: "display: block; margin: 0 auto; max-width: 200px;" }
         = image_tag "lightspeed_partner_logo.png"
@@ -64,8 +61,6 @@
 
 
   %article.padded.vendor-signup-form.bottom-padded#add_organization
-    %h3
-      Sign your shop up
-
+    %h3= t(".sign_your_shop_up")
 
     = render "/organizations/new_form"
