--- a/app/views/info/protect_your_bike.html.haml
+++ b/app/views/info/protect_your_bike.html.haml
@@ -1,67 +1,56 @@
 %h1
-  Protect your bike!
+  = t(".protect_your_bike")
 %h2#fnref-bike-theft-estimate
-  Over a million bikes are stolen every year in the US
+  = t(".over_a_million_bikes_are_stolen_yearly")
   %sup
     %a.footnote-ref{ href: "#fn-bike-theft-estimate" }
       1
 
   %br
   %strong
-    Make sure your bike isn't one of them
+    = t(".make_sure_your_bike_isnt_one_of_them")
 
 %article.padded
   %ol
     %li
       %p
-        %strong
-          Cable locks should never be used as a primary means of locking a bike in a city.
-        Cheaper and older U-locks can often be broken without any tools.
-        %strong
-          Use a u-lock that costs at least $40.
+        %strong= t(".cable_locks_should_never_be_used_as_primary")
+        = t(".cheaper_and_older_ulocks_can_often_be_broken")
+        %strong= t(".use_a_ulock_that_costs_at_least_40")
     %li
-      %p
-        Aim to have the hardest bike to steal on the rack. We consider two U-locks, or a U-lock and one heavy duty cable, to be the minimum required in large cities to keep a bike secure.
+      %p= t(".aim_to_have_the_hardest_bike_to_steal_on_")
     %li
-      %p
-        Don't rely on foot traffic to keep your bike safe; years of reports have taught us that many thefts, particularly those involving cutting cable locks, occur under the cover of crowd activity or in front of bustling cafés or restaurants.
+      %p= t(".dont_rely_on_foot_traffic_to_keep_your_bi")
     %li
-      %p
-        Don't rely on the presence of cameras to keep your bike secure. Security footage is rarely of much use once a bike is gone, and thieves know this.
+      %p= t(".dont_rely_on_the_presence_of_cameras_to_k")
     %li
-      %p
-        Tug on whatever you're about to lock to make sure it can't be easily removed. Signposts in particular can be easily removed by unbolting them and some are already unattached.
+      %p= t(".tug_on_whatever_youre_about_to_lock_to_ma")
     %li
-      %p
-        Many bicycles are stolen from garages and store rooms. Lock your bike securely to an immovable object even if in a "secure" place.
+      %p= t(".many_bicycles_are_stolen_from_garages_and")
 
 
 %article
   #locking-demonstration
     .locked
-      = image_tag "Locking.svg", alt: "Correctly locking a bike", title: "Pink Power U-Locks are a registered trademark of Bike Index, NFP"
+      = image_tag "Locking.svg", alt: t(".correctly_locking_a_bike"), title: t(".pink_power_ulocks")
     %p
-      %strong
-        A correctly locked bicycle
+      %strong= t(".a_correctly_locked_bicycle")
       %br
-      The frame is locked to an immovable object. Both wheels are secured.
+      = t(".the_frame_is_locked_to_an_immovable_objec")
 
 %p
+  - chicago_link = link_to "Chicago.StolenBike.org", "http://chicago.stolenbike.org"
+  - sweethome_link = link_to "Sweethome", "http://thesweethome.com/reviews/best-bike-lock/"
   %em.less-strong
-    Thanks to #{ link_to "Chicago.StolenBike.org", "http://chicago.stolenbike.org" } for suggestions and the research behind these guidelines. Thanks to #{ link_to "Sweethome", "http://thesweethome.com/reviews/best-bike-lock/" } for their excellent article on choosing a lock.
+    = t(".thanks_to_researchers_html", chicago_link: chicago_link, sweethome_link: sweethome_link)
 
 
 
 .footnotes
+  - stolen_link = link_to t(".211547_bikes_were_reported_stolen"), "https://www.fbi.gov/about-us/cjis/ucr/crime-in-the-u.s/2014/crime-in-the-u.s.-2014/tables/table-7"
+  - theft_link = link_to t(".9_in_10_incidents_of_bike_theft"), "http://www.transalt.org/files/resources/blueprint/chapter11/"
+  - priceonomics_link = link_to t(".exploration"), "http://blog.priceonomics.com/post/30393216796/what-happens-to-stolen-bicycles"
+  - back_link = link_to "↩", "#fnref-bike-theft-estimate", title: t(".jump_to_footnote_1"), class: "footnote-back-link"
   %ol
     %li#fn-bike-theft-estimate
-      According to FBI statistics,
-      %a{ href: "https://www.fbi.gov/about-us/cjis/ucr/crime-in-the-u.s/2014/crime-in-the-u.s.-2014/tables/table-7" }
-        211,547 bikes were reported stolen
-      in 2014, the most recent available year with data. An estimated
-      %a{ href: "http://www.transalt.org/files/resources/blueprint/chapter11/" }
-        9 in 10 incidents of bike theft
-      go unreported. That's a lot of bikes! If you would like to read more about bike theft in the US, check out Priceonomics'
-      %a{ href: "http://blog.priceonomics.com/post/30393216796/what-happens-to-stolen-bicycles" }
-        exploration
-      of the topic. #{link_to "↩", "#fnref-bike-theft-estimate", title: "Jump back to footnote 1 in the text", class: "footnote-back-link"}.
+      = t(".according_to_fbi_statistics_html", stolen_link: stolen_link, theft_link: theft_link, priceonomics_link: priceonomics_link, back_link: back_link)
